--- a/sass/components/l10n_client/_l10n_client.scss
+++ b/sass/components/l10n_client/_l10n_client.scss
@@ -1,6 +1,7 @@
 /* l10n Client Styles */
 
 #l10n-client {
+  z-index: 501;
   h2 {
     border-left: none;
     font-size: 1.2em;
